--- a/style.css
+++ b/style.css
@@ -104,24 +104,13 @@ footer {
   }
 
 .grid-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px; /* Adjust the gap between pictures */
+    gap: 10px; /* Adjust the gap between pictures */
 }
 
 .grid-item {
     position: relative;
     overflow: hidden;
   }
-@media screen and (max-width: 768px) {
-    .grid-layout {
-      display: block; /* Switch to a block layout */
-    }
-
-    .grid-item {
-      margin-bottom: 20px; /* Add margin to separate list items */
-    }
-
   .imagef{
     display: block;
     width: 100%;
